--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infuncer Gear</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/3b0fcba514.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <header>
+    <nav>
+        <h5>Influencer products</h5>
+
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Sign up</a></li>
+        <li><a href="">Log In</a></li>
+        <li> <i class="fa-solid fa-magnifying-glass"></i>
+            </li>
+            <li><i class="fa-solid fa-cart-plus"></i></li>
+    </ul>
+    
+</nav>
+
+<div class="banner">
+    <div class="banner-container">
+        <h1>Start your Journey as 
+            Influencer</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+        <button class="primay-btn">Preebook now</button>
+    </div>
+    <img src="images/main-camera.png" alt="">
+</div>
 
    </header>
    <main>
